# AmunraCodification

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  LICENSE.txt  README.md  pytest.ini  test.txt
envirnoment/: Dockerfile.txt  docker-compose.yaml  docker-compose.yml
envirnoment/resources/: plugins.txt
environment/: Dockerfile  Dockerfile.txt  docker-compose.yaml  jenkins-casc.yml
environment/resources/: jenkins-casc.yaml  plugins.txt
scripts(helper)/: script_helper.py  ut_scripts.py
scripts/helper/: script_helper.py
scripts/helper/ut/: ut_scripts.py  ut_scripts2.py
src/: CMakeLists.txt  MatrixMultiplicationFunction.cpp  StandardDeviation.cpp
src/Program_HelloWorld/: CMakeLists.txt
src/Program_MatrixMultiplicationFunction/: CMakeLists.txt
src/Program_StandardDeviation/: CMakeLists.txt
